# url_shortner

./: Cargo.toml  clippy.toml
migrations/: 20250705125657_all_i32_int.sql  20250705130552_convert-work_id-to-int.sql  20250706163912_init.sql
src/: error.rs  main.rs  model.rs  test.rs
