[package]
name = "url_shortner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls","postgres","macros"]}
tower = { version = "0.4", features = ["util"] }
thiserror = "1.0"
bytes = "1"